k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-chat-deployment
  namespace: chat-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      name: backend-pod
      namespace: chat-ns
      labels:
        app: backend
    spec:
      containers:
        - name: chat-backend
          image: kartoos21/chat-app-backend:latest
          ports:
            - containerPort: 5001
