k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-chat-deployment
  namespace: chat-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      name: frontend-pod
      namespace: chat-ns
      labels:
        app: frontend
    spec:
      containers:
        - name: chat-frontend
          image: kartoos21/chat-app-frontend:latest
          ports:
            - containerPort: 80
