k8s/mongodb-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-chat-deployment
  namespace: chat-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      name: mongodb-pod
      namespace: chat-ns
      labels:
        app: mongodb
    spec:
      containers:
        - name: chat-mongodb
          image: mongo:latest
          ports:
            - containerPort: 27017
      volumes:
        - name: mongodb-storage
          persistentVolumeClaim:
            claimName: mongodb-pvc
