k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: chat-ns
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
